[gd_scene load_steps=2 format=2]

[ext_resource path="res://menuprincipal.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="listaconectados" type="ItemList" parent="."]
margin_left = 283.0
margin_top = 89.0
margin_right = 626.0
margin_bottom = 399.0

[node name="nomeconfig" type="LineEdit" parent="."]
margin_left = 767.0
margin_top = 145.0
margin_right = 982.0
margin_bottom = 169.0
text = "Jogador"

[node name="ipconfig" type="LineEdit" parent="."]
margin_left = 767.0
margin_top = 195.0
margin_right = 982.0
margin_bottom = 219.0
text = "127.0.0.1"

[node name="iniciar" type="Button" parent="."]
margin_left = 710.0
margin_top = 462.0
margin_right = 906.0
margin_bottom = 491.0
text = "Iniciar"

[node name="entrar" type="Button" parent="."]
margin_left = 411.0
margin_top = 461.0
margin_right = 607.0
margin_bottom = 490.0
text = "Entrar"

[node name="criar" type="Button" parent="."]
margin_left = 124.0
margin_top = 461.0
margin_right = 320.0
margin_bottom = 490.0
text = "Criar"

[node name="Label" type="Label" parent="."]
margin_left = 655.0
margin_top = 142.0
margin_right = 748.0
margin_bottom = 169.0
text = "Nome:"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 659.0
margin_top = 192.0
margin_right = 752.0
margin_bottom = 219.0
text = "Ip:"
align = 1
valign = 1

[node name="mensagem" type="PanelContainer" parent="."]
visible = false
margin_left = 273.0
margin_top = 165.0
margin_right = 576.0
margin_bottom = 280.0
rect_scale = Vector2( 1.2, 1.2 )

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="mensagem"]
margin_left = 7.0
margin_top = 7.0
margin_right = 296.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="mensagem/AspectRatioContainer"]
margin_left = 26.5
margin_top = 35.0
margin_right = 262.5
margin_bottom = 66.0
text = "Ocorreu uma falha na conex√£o, tente
novamente"
align = 1
valign = 1

[node name="confirmar" type="Button" parent="mensagem/AspectRatioContainer"]
margin_left = 94.0
margin_top = 81.0
margin_right = 195.0
margin_bottom = 101.0
size_flags_vertical = 8
text = "Confirmar"

[connection signal="pressed" from="iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="entrar" to="." method="_on_entrar_pressed"]
[connection signal="pressed" from="criar" to="." method="_on_criar_pressed"]
[connection signal="pressed" from="mensagem/AspectRatioContainer/confirmar" to="." method="_on_mensagem_confirmar_pressed"]
